# winlator-7.1

./: .gitignore  README.md
app/: build.gradle  debug.jks
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt
app/src/main/cpp/fluidsynth/: CMakeLists.txt  build.sh  midi_server.cpp
app/src/main/cpp/fluidsynth/lib/arm64-v8a/cmake/FLAC/: targets.cmake
app/src/main/cpp/fluidsynth/lib/arm64-v8a/cmake/Opus/: OpusConfig.cmake  OpusTargets.cmake
app/src/main/cpp/fluidsynth/lib/arm64-v8a/cmake/fluidsynth/: FluidSynthTargets.cmake
app/src/main/cpp/fluidsynth/lib/arm64-v8a/pkgconfig/: fluidsynth.pc
app/src/main/java/com/ewt45/winlator/: E01_MyApplication.java  E02_KeyInput.java  E03_Logcat.java  E04_PRootShell.java  E05_Orientation.java  E06_ClickToMovePointer.java  E07_PIP.java  E08_Battery.java  E09_Vibrate.java  E10_ShortcutOnAndroidScreen.java  E11_ManageStorage.java  E12_Locale.java  E13_Extractor.java  E14_MidiServer.java  ExtraFeatures.java  ForeGroundService.java  OBBFinder.java  OBBSelectFragment.java  PulseAudio.java  QH.java  Test.java  Test.smali  TestXserver.java  UtilsReflect.java  XserverNavMenuControl.java
app/src/main/java/com/ewt45/winlator/resouces/: StringEn.java  StringZh.java
app/src/main/java/com/ewt45/winlator/widget/: SimpleTextWatcher.java
app/src/main/java/com/example/datainsert/winlator/all/: E2_KeyInput.java  E4_PRootShell.java  E6_ClickToMovePointer.java  ExtraFeatures.java  QH.java  Test.java  UtilsReflect.java
app/src/main/java/com/example/datainsert/winlator/all/resouces/: StringEn.java  StringZh.java
app/src/main/java/com/winlator/: ControlsEditorActivity.java  MainActivity.java  SettingsFragment.java  ShortcutsFragment.java  XServerDisplayActivity.java
app/src/main/java/com/winlator/inputcontrols/: ControlElement.java
app/src/main/java/com/winlator/renderer/: GLRenderer.java
app/src/main/java/com/winlator/widget/: TouchpadView.java
app/src/main/java/com/winlator/xconnector/: ClientSocket.java  UnixSocketConfig.java
app/src/main/java/com/winlator/xenvironment/components/: GuestProgramLauncherComponent.java
app/src/main/java/com/winlator/xserver/: ClientOpcodes.java  Keyboard.java  XClientRequestHandler.java
app/src/main/res/layout/: input_controls_dialog.xml  settings_fragment.xml  task_manager_dialog.xml  zzz_settings_fragment_extra.xml
app/src/main/res/values/: strings.xml
app/src/main/res/values-zh/: strings.xml
